--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -8,7 +8,7 @@
         <style>
             body:before {
             content: " ";
-            background-image: url(./images/bg.jpg);
+            background-image: url(./images/doge_banner.png);
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
