feat: add students

--- a/layouts/_default/about.html
+++ b/layouts/_default/about.html
@@ -73,9 +73,9 @@
                             <p>“{{ .content }}”</p>
                         </blockquote>
                         <div class="author">
-                            <!-- <div class="image">
-                                        <img src="images/pic01.jpg" alt="" />
-                                    </div> -->
+                            <div class="image">
+                                    "{{ .image }}"
+                            </div>
                             <p class="credit">- <strong>{{ .name }}</strong> <br /> <span>{{ .title }}
                                     <br />{{ .company }}</span></p>
                         </div>
