--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,10 +3,8 @@
     <div class="inner">
         <div class="content">
             <section>
-                <h3>Are you ready to stop the struggle and secure your platform?</h3>
-                <p class="mt-5">Doge is ready to partner up and solve the problems involving
-                    <br />the development and operations at your company.
-                <p>
+                <h3>Are you ready to stop the struggle and learn to create some code?</h3>
+                <p class="mt-5">Doge is ready to partner up help you create some code.<p>
             </section>
             <section>
                 <h4>Credits</h4>
