--- a/layouts/_default/product.html
+++ b/layouts/_default/product.html
@@ -13,6 +13,10 @@
             </div>
         </div>
         {{ end }}
+        <script async src="https://js.stripe.com/v3/pricing-table.js"></script>
+        <stripe-pricing-table pricing-table-id="prctbl_1OEZMxGsN7jBudkSi27ruxAJ"
+        publishable-key="pk_live_51MaUYCGsN7jBudkSJDs3G9XmrCWO2ClXCOnCRhnhpL9snUl7wzQebFp8dPiKgWkUooRHhiRkNrjpsCfTW3YW4B7900Bvnhz99z">
+        </stripe-pricing-table>
     </div>
 </div>
 {{ end }}
