--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,7 +6,7 @@
                 <h3>Are you ready to stop the struggle and learn to create some code?</h3>
                 <p class="mt-5">Doge is ready to partner up help you create some code.<p>
             </section>
-            <section>
+            <!-- <section>
                 <h4>Credits</h4>
                 <ul class="alt">
                     <li><a target="_blank" href="https://github.com/">Github</a></li>
@@ -14,16 +14,16 @@
                     <li><a target="_blank" href="https://templated.co/">Templated.co</a></li>
                     <li><a target="_blank" href="https://pixabay.com/">Pixabay</a></li>
                 </ul>
-            </section>
+            </section> -->
             <section>
                 <h4>Links</h4>
                 <ul class="plain">
                     <!-- <li><a target="_blank" href="https://www.linkedin.com/in/ryan-le-bon/"><i -->
                     <!-- class="icon fa-linkedin">&nbsp;</i>LinkedIn</a></li> -->
                     <!-- <li><a target="_blank" href="https://github.com/ryanlb777"><i class="icon fa-github">&nbsp;</i>Github</a></li> -->
-                    <li><a target="_blank" href="https://archiveprogram.github.com/"><i
+                    <!-- <li><a target="_blank" href="https://archiveprogram.github.com/"><i
                                 class="icon fa-snowflake-o"></i>Arctic Code
-                            Vault Contributor</a></li>
+                            Vault Contributor</a></li> -->
                 </ul>
             </section>
         </div>
