--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -27,8 +27,8 @@
                 </ul>
             </section>
         </div>
-        <div class="copyright">
+        <!-- <div class="copyright">
             Ryan LeBon LLC &copy; All Rights Reserved.
-        </div>
+        </div> -->
     </div>
 </footer>
