--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3026,7 +3026,7 @@ ul.icons li .icon:before {
 /* Banner */
 .bg_pic {
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url(../../images/banner.jpg);
+    url(../../images/banner.png);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -4477,7 +4477,7 @@ a.navbar-brand {
   justify-content: center;
   background-image: linear-gradient(rgba(17, 17, 17, 0.25),
       rgba(17, 17, 17, 0.25)),
-    url("../../images/banner.jpg");
+    url("../../images/banner.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
