--- a/static/sass/layout/_heading.scss
+++ b/static/sass/layout/_heading.scss
@@ -11,7 +11,7 @@
       transparentize(_palette(accent2, bg), 0.75),
       transparentize(_palette(accent2, bg), 0.75)
     ),
-    url("../../images/banner.jpg");
+    url("../../images/banner.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
