--- a/layouts/_default/product.html
+++ b/layouts/_default/product.html
@@ -1,6 +1,19 @@
 {{ define "main" }}
 {{ $data := index .Site.Data }}
 
+<!-- Banner -->
+<div id="heading">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-10 col-lg-8 text-center">
+                <h1 class="introduction">{{ .Params.bannerHeading }}</h1>
+                <h2 class="introduction">{{ .Params.bannerDescription }}</h2>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Banner End -->
+
 <div class="container">
     <div class="background-image"></div>
     <div class="blog-posts">
