fix: update paragraph doge code

--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -6,7 +6,7 @@
                 <h1 class="introduction">{{ .Params.bannerHeading }}</h1>
                 <h2 class="introduction">{{ .Params.bannerDescription }}</h2>
                 {{ if .IsHome }}<img class="img-fluid mb-4" src="{{.Site.Params.homepage.bannerImage}}"
-                    alt="Iontra logo">
+                    alt="logo">
                 {{ else }}{{ end }}
             </div>
         </div>
