--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -18,8 +18,8 @@
             <section>
                 <h4>Links</h4>
                 <ul class="plain">
-                    <!-- <li><a target="_blank" href="https://www.linkedin.com/in/ryan-le-bon/"><i -->
-                    <!-- class="icon fa-linkedin">&nbsp;</i>LinkedIn</a></li> -->
+                    <li><a target="_blank" href="https://discord.gg/xEeWS8PFPm"><i
+                    class="icon fa-linkedin">&nbsp;</i>https://discord.gg/xEeWS8PFPm</a></li>
                     <!-- <li><a target="_blank" href="https://github.com/ryanlb777"><i class="icon fa-github">&nbsp;</i>Github</a></li> -->
                     <!-- <li><a target="_blank" href="https://archiveprogram.github.com/"><i
                                 class="icon fa-snowflake-o"></i>Arctic Code
