--- a/layouts/_default/product.html
+++ b/layouts/_default/product.html
@@ -36,6 +36,8 @@
                         </button>
                     </a>
                 </stripe-buy-button>
+                
+                <!-- Your existing content goes here -->
             </div>
         </div>
         {{ end }}
