--- a/layouts/_default/product.html
+++ b/layouts/_default/product.html
@@ -25,7 +25,7 @@
                 {{ .content | markdownify }}
                 
                 <!-- Add Stripe Pricing Table integration here -->
-                <script async src="https://js.stripe.com/v3/pricing-table.js"></script>
+                <script src="https://js.stripe.com/v3/" defer></script>
                 <script>
                     document.addEventListener("DOMContentLoaded", function() {
                         var stripe = Stripe("{{ .pricing_table.publishable_key }}");
