--- a/layouts/_default/product.html
+++ b/layouts/_default/product.html
@@ -14,7 +14,7 @@
 </div>
 <!-- Banner End -->
 
-<div class="container">
+<div class="container-fluid">
     <div class="background-image"></div>
     <div class="blog-posts">
         {{ range $index, $product := $data.product.product }}
