--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -26,6 +26,7 @@
 
 
 {{- /* Favicons */}}
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <link rel="icon" href="{{ .Site.Params.assets.favicon | default "favicon.ico" | relURL  }}">
 <link rel="icon" type="image/png" sizes="16x16" href="{{ .Site.Params.assets.favicon16x16 | default "favicon-16x16.png" | relURL  }}">
 <link rel="icon" type="image/png" sizes="32x32" href="{{ .Site.Params.assets.favicon32x32 | default "favicon-32x32.png" | relURL  }}">
