--- a/layouts/_default/product.html
+++ b/layouts/_default/product.html
@@ -36,7 +36,7 @@
                         <script async src="https://js.stripe.com/v3/buy-button.js"></script>
                         <stripe-buy-button
                             buy-button-id="{{ $product.buy_button_id }}"
-                            publishable-key="{{ $product.publishable_key }}"
+                            publishable-key="{{ $product.pricing_table.publishable_key }}"
                         >
                             <a href="{{ $product.purchase }}" style="text-decoration: none;">
                                 <button style="background-color: #5cb85c; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;">
