feat: build doge codes website

--- a/layouts/_default/product.html
+++ b/layouts/_default/product.html
@@ -23,7 +23,7 @@
         <div class="col-md-12">
             <div class="blog-post">
                 <h2>{{ $product.title }}</h2>
-                <p>Published on {{ $product.date }} by {{ $product.author }}</p>
+                <p>Published on {{ $product.date }}.</p>
                 <div class="content">
                     {{ $product.content | markdownify }}
 
