--- a/layouts/_default/service.html
+++ b/layouts/_default/service.html
@@ -17,6 +17,10 @@
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-10 col-lg-8 text-center">
+            <header class="special">
+                <h2> Please subscribe to Doge Codes premium plan to support the community and the youtube channel!</h2>
+                <img src="../images/line_break.png" alt="">
+            </header>
             <script async src="https://js.stripe.com/v3/pricing-table.js"></script>
             <stripe-pricing-table pricing-table-id="prctbl_1OHf4RGsN7jBudkSGtLCg3tP"
             publishable-key="pk_live_51MaUYCGsN7jBudkSJDs3G9XmrCWO2ClXCOnCRhnhpL9snUl7wzQebFp8dPiKgWkUooRHhiRkNrjpsCfTW3YW4B7900Bvnhz99z">
