--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -19,6 +19,7 @@
                 <h4>Links</h4>
                 <ul class="plain">
                     <li><a target="_blank" href="https://discord.gg/xEeWS8PFPm">https://discord.gg/xEeWS8PFPm</a></li>
+                     <li><a target="_blank" href="https://youtube.com/@DogeCodes?si=XKDoO7VWXkgxj880">Youtube</a></li>
                     <!-- <li><a target="_blank" href="https://github.com/ryanlb777"><i class="icon fa-github">&nbsp;</i>Github</a></li> -->
                     <!-- <li><a target="_blank" href="https://archiveprogram.github.com/"><i
                                 class="icon fa-snowflake-o"></i>Arctic Code
