--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,12 +1,18 @@
 <!-- Footer -->
 <footer id="footer">
-    <div class="inner">
-        <div class="content">
-            <section>
-                <h3>Are you ready to stop the struggle and learn to create some code?</h3>
-                <p class="mt-5">Doge is ready to partner up help you create some code.<p>
-            </section>
-            <!-- <section>
+  <div class="inner">
+    <div class="content">
+      <section>
+        <h3>
+          Are you ready to stop the struggle and learn to create some code?
+        </h3>
+        <p class="mt-5">
+          Doge is ready to partner up help you create some code.
+        </p>
+        <p></p>
+      </section>
+
+      <!-- <section>
                 <h4>Credits</h4>
                 <ul class="alt">
                     <li><a target="_blank" href="https://github.com/">Github</a></li>
@@ -15,20 +21,30 @@
                     <li><a target="_blank" href="https://pixabay.com/">Pixabay</a></li>
                 </ul>
             </section> -->
-            <section>
-                <h4>Links</h4>
-                <ul class="plain">
-                    <li><a target="_blank" href="https://discord.gg/xEeWS8PFPm">https://discord.gg/xEeWS8PFPm</a></li>
-                     <li><a target="_blank" href="https://youtube.com/@DogeCodes?si=XKDoO7VWXkgxj880">Youtube</a></li>
-                    <!-- <li><a target="_blank" href="https://github.com/ryanlb777"><i class="icon fa-github">&nbsp;</i>Github</a></li> -->
-                    <!-- <li><a target="_blank" href="https://archiveprogram.github.com/"><i
+      <section>
+        <h4>Links</h4>
+        <ul class="plain">
+          <li>
+            <a target="_blank" href="https://discord.gg/xEeWS8PFPm"
+              >https://discord.gg/xEeWS8PFPm</a
+            >
+          </li>
+          <li>
+            <a
+              target="_blank"
+              href="https://youtube.com/@DogeCodes?si=XKDoO7VWXkgxj880"
+              >Youtube</a
+            >
+          </li>
+          <!-- <li><a target="_blank" href="https://github.com/ryanlb777"><i class="icon fa-github">&nbsp;</i>Github</a></li> -->
+          <!-- <li><a target="_blank" href="https://archiveprogram.github.com/"><i
                                 class="icon fa-snowflake-o"></i>Arctic Code
                             Vault Contributor</a></li> -->
-                </ul>
-            </section>
-        </div>
-        <!-- <div class="copyright">
+        </ul>
+      </section>
+    </div>
+    <!-- <div class="copyright">
             Ryan LeBon LLC &copy; All Rights Reserved.
         </div> -->
-    </div>
+  </div>
 </footer>
