build: update footer link

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -26,7 +26,7 @@
         <ul class="plain">
           <li>
             <a target="_blank" href="https://discord.gg/xEeWS8PFPm"
-              >https://discord.gg/xEeWS8PFPm</a
+              >Discord</a
             >
           </li>
           <li>
