--- a/layouts/index.html
+++ b/layouts/index.html
@@ -37,6 +37,12 @@
 
     #iframevideo{
         padding: 20px;
+        background-image: linear-gradient(rgba(17, 17, 17, 0.25),
+                rgba(17, 17, 17, 0.25)),
+            url("images/banner.png");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
     }
 </style>
 
