--- a/layouts/index.html
+++ b/layouts/index.html
@@ -66,6 +66,14 @@
     </div>
     <br/>
 </div>
+
+<div class="container">
+    <br/>
+    <div class="row justify-content-center">
+<iframe src="YOUR_EMBEDDED_URL" width="600" height="400" frameborder="0" scrolling="no"></iframe>
+</div>
+<br/>
+</div>
 <!-- Banner End -->
 
 <!-- Technologies start -->
