--- a/layouts/index.html
+++ b/layouts/index.html
@@ -70,7 +70,8 @@
 <div class="container">
     <br/>
     <div class="row justify-content-center">
-        <iframe src="https://coinmarketcap.com/watchlist/61731408ad9db6359e47fa0f/" width="600" height="400" frameborder="0" scrolling="no"></iframe>
+        <iframe src="https://coinmarketcap.com/watchlist/61731408ad9db6359e47fa0f/" width="100%" height="600px" frameborder="0"></iframe>
+
      </div>
     <br/>
 </div>
